sync: explicit finalize after global bar in xprof

--- a/xprof/xprof.rb.in
+++ b/xprof/xprof.rb.in
@@ -237,6 +237,7 @@ class Sync_daemon
   end
 
   def finalize
+    LOGGER.info { "finalize Sync_daemon" }
     lazy_exec do
       `kill -#{RT_SIGNAL_FINISH} #{@pid}`
     end
@@ -539,6 +540,7 @@ def on_node_processing(backends, syncd)
 
   # Global Barrier
   syncd.global_barrier
+  syncd.finalize
 
   # Replace mpi_job_id with a better name
   return unless mpi_master?
