--- a/ze/Makefile.am
+++ b/ze/Makefile.am
@@ -12,10 +12,13 @@ ZE_STRUCTS_NAMESPACES = $(ZE_NAMESPACES:=_structs)
 ZE_HDR_ROOT = \
 	ze_api.h \
         ze_ddi.h \
+        ze_ddi_ver.h \
         zes_api.h \
         zes_ddi.h \
+        zes_ddi_ver.h \
         zet_api.h \
         zet_ddi.h \
+        zet_ddi_ver.h \
         loader/ze_loader_api.h \
         layers/zel_tracing_api.h \
         layers/zel_tracing_ddi.h \
