--- a/.github/workflows/presubmit.yml
+++ b/.github/workflows/presubmit.yml
@@ -97,10 +97,41 @@ jobs:
             build/config.log
             build/**/tests/*.log
 
-  build-install-and-integration_tests:
+  build-install-mpi-enabled:
     needs: [babeltrace2, pre_job]
     if: ${{ needs.pre_job.outputs.should_skip != 'true' }}
-    name: Build and Install and Integration Tests ubuntu-latest
+    name: Build and Install for Integration tests ubuntu-latest
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: mpi4py/setup-mpi@v1
+      - uses: actions/cache@v4
+        id: babeltrace2
+        env:
+          cache-name: cache-babeltrace2
+        with:
+          path: ~/babeltrace2/2.0.4
+          key: ${{ runner.os }}-build-${{ env.cache-name }}
+      - run: sudo apt update; sudo apt install -y gcc g++ lttng-tools liblttng-ust-dev ruby ruby-dev elfutils libelf-dev libdw-dev libprotobuf-dev protobuf-compiler bats libpocl2 clinfo valgrind
+      - run: sudo gem install cast-to-yaml nokogiri babeltrace2 opencl_ruby_ffi metababel
+      - name: Load Babeltrace2
+        run: |
+          echo "$HOME/babeltrace2/2.0.4/bin" >> $GITHUB_PATH
+          echo "PKG_CONFIG_PATH=$HOME/babeltrace2/2.0.4/lib/pkgconfig:$PKG_CONFIG_PATH" >> $GITHUB_ENV
+          echo "CPATH=$HOME/babeltrace2/2.0.4/include:$CPATH" >> $GITHUB_ENV
+          echo "LD_LIBRARY_PATH=$HOME/babeltrace2/2.0.4/lib:$LD_LIBRARY_PATH" >> $GITHUB_ENV
+          echo "LIBRARY_PATH=$HOME/babeltrace2/2.0.4/lib:$LIBRARY_PATH" >> $GITHUB_ENV
+      - run: mkdir -p build
+      - run: ./autogen.sh
+      - run: ../configure --prefix=`pwd`/ici
+        working-directory: build
+      - run: make -j install
+        working-directory: build
+
+  integration-test-non-mpi:
+    needs: [babeltrace2, pre_job]
+    if: ${{ needs.pre_job.outputs.should_skip != 'true' }}
+    name: Integration Tests (non MPI) ubuntu-latest
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -133,32 +164,50 @@ jobs:
         env:
           THAPI_TEST_BIN: clinfo
           THAPI_BIN_DIR: ./build/ici/bin
+
+  integration-test-mpi:
+    needs: [babeltrace2, pre_job]
+    if: ${{ needs.pre_job.outputs.should_skip != 'true' }}
+    name: Integration Tests (MPI) ubuntu-latest
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        thapi_sync_daemon: [ 'fs', 'mpi' ]
+    env:
+      THAPI_TEST_BIN: clinfo
+      THAPI_BIN_DIR: ./build/ici/bin
+      THAPI_SYNC_DAEMON: ${{ matrix.thapi_sync_daemon }}
+    steps:
+      - uses: actions/checkout@v4
+      - uses: mpi4py/setup-mpi@v1
+      - uses: actions/cache@v4
+        id: babeltrace2
+        env:
+          cache-name: cache-babeltrace2
+        with:
+          path: ~/babeltrace2/2.0.4
+          key: ${{ runner.os }}-build-${{ env.cache-name }}
+      - run: sudo apt update; sudo apt install -y gcc g++ lttng-tools liblttng-ust-dev ruby ruby-dev elfutils libelf-dev libdw-dev libprotobuf-dev protobuf-compiler bats libpocl2 clinfo valgrind
+      - run: sudo gem install cast-to-yaml nokogiri babeltrace2 opencl_ruby_ffi metababel
+      - name: Load Babeltrace2
+        run: |
+          echo "$HOME/babeltrace2/2.0.4/bin" >> $GITHUB_PATH
+          echo "PKG_CONFIG_PATH=$HOME/babeltrace2/2.0.4/lib/pkgconfig:$PKG_CONFIG_PATH" >> $GITHUB_ENV
+          echo "CPATH=$HOME/babeltrace2/2.0.4/include:$CPATH" >> $GITHUB_ENV
+          echo "LD_LIBRARY_PATH=$HOME/babeltrace2/2.0.4/lib:$LD_LIBRARY_PATH" >> $GITHUB_ENV
+          echo "LIBRARY_PATH=$HOME/babeltrace2/2.0.4/lib:$LIBRARY_PATH" >> $GITHUB_ENV
+      - run: mkdir -p build
+      - run: ./autogen.sh
+      - run: ../configure --prefix=`pwd`/ici
+        working-directory: build
+      - run: make -j install
+        working-directory: build
       - name: iprof mpi tests sync-fs
         run: |
-          bats integration_tests/mpi_test.bats
-        env:
-          THAPI_TEST_BIN: clinfo
-          THAPI_BIN_DIR: ./build/ici/bin
-          TAHPI_SYNC_DAEMON: fs
-      - name: iprof mpi tests sync-mpi
-        run: |
-          bats integration_tests/mpi_test.bats
-        env:
-          THAPI_TEST_BIN: clinfo
-          THAPI_BIN_DIR: ./build/ici/bin
-          THAPI_SYNC_DAEMON: mpi
-      - name: test sync_daemon_fs
+        bats integration_tests/mpi_test.bats
+      - name: test sync_daemon
         run: |
           bats integration_tests/sync_daemon_test.bats
-        env:
-          THAPI_BIN_DIR: ./build/ici/bin
-          THAPI_SYNC_DAEMON: fs
-      - name: test sync_daemon_mpi
-        run: |
-          bats integration_tests/sync_daemon_test.bats
-        env:
-          THAPI_BIN_DIR: ./build/ici/bin
-          THAPI_SYNC_DAEMON: mpi
 
   build-in-tree:
     needs: [babeltrace2, pre_job]
