thapi zex working

--- a/xprof/xprof.rb.in
+++ b/xprof/xprof.rb.in
@@ -379,6 +379,7 @@ def enable_events_ze(channel_name, tracing_mode: 'default', profiling: true)
     exec("#{lttng_enable} lttng_ust_ze:*")
     exec("#{lttng_enable} lttng_ust_zes:*")
     exec("#{lttng_enable} lttng_ust_zet:*")
+    exec("#{lttng_enable} lttng_ust_zex:*")
   when 'default'
     exec("#{lttng_enable} lttng_ust_ze_build:log*")
     exec("#{lttng_enable} lttng_ust_ze_profiling:*") if profiling
