--- a/ze/zex_meta_parameters.yaml
+++ b/ze/zex_meta_parameters.yaml
@@ -1,2 +1,8 @@
 ---
-meta_parameters: {}
+meta_parameters:
+  zexMemGetIpcHandles:
+    - [InOutScalar, numIpcHandles]
+    - [OutArray, pIpcHandles, numIpcHandles]
+  zexMemOpenIpcHandles:
+    - [InArray, pIpcHandles, numIpcHandles]
+    - [OutScalar, pptr]
