--- a/ze/ze_events.yaml
+++ b/ze/ze_events.yaml
@@ -43,6 +43,26 @@ lttng_ust_ze_sampling:
     - [ ctf_integer_hex, uintptr_t, hDevice, "(uintptr_t)hDevice" ]
     - [ ctf_integer, uint32_t, domain, "domain" ]
     - [ ctf_integer, uint64_t, frequency, "frequency" ]
+  - name: fabricPortProperties
+    args:
+    - [ ze_device_handle_t, hDevice ]
+    - [ zes_fabric_port_handle_t, hFabricPort ]
+    - [ zes_fabric_port_properties_t *, pFabricPortProperties ]
+    fields:
+    - [ ctf_integer_hex, uintptr_t, hDevice, "(uintptr_t)hDevice" ]
+    - [ ctf_integer_hex, uintptr_t, hFabricPort, "(uintptr_t)hFabricPort" ]
+    - [ ctf_sequence_text, uint8_t, pFabricPortProperties_val, pFabricPortProperties, size_t, "sizeof(zes_fabric_port_properties_t)" ]
+  - name: fabricPort
+    args:
+    - [ ze_device_handle_t, hDevice ]
+    - [ zes_fabric_port_handle_t, hFabricPort ]
+    - [ zes_fabric_port_state_t *, pFabricPortState ]
+    - [ zes_fabric_port_throughput_t *, pFabricPortThroughput ]
+    fields:
+    - [ ctf_integer_hex, uintptr_t, hDevice, "(uintptr_t)hDevice" ]
+    - [ ctf_integer_hex, uintptr_t, hFabricPort, "(uintptr_t)hFabricPort" ]
+    - [ ctf_sequence_text, uint8_t, pFabricPortState_val, pFabricPortState, size_t, "sizeof(zes_fabric_port_state_t)" ]
+    - [ ctf_sequence_text, uint8_t, pFabricPortThroughput_val, pFabricPortThroughput, size_t, "sizeof(zes_fabric_port_throughput_t)" ]
 lttng_ust_ze_profiling:
   events:
   - name: event_profiling
