--- a/ze/ze_events.yaml
+++ b/ze/ze_events.yaml
@@ -1,48 +1,60 @@
 ---
 lttng_ust_ze_sampling:
   events:
-  - name: copyEngine
+  - name: engineProperties
     args:
     - [ ze_device_handle_t, hDevice ]
-    - [ uint32_t, subDevice ]
-    - [ uint64_t, activeTime ]
-    - [ uint64_t, timestamp ]
+    - [ zes_engine_handle_t, hEngines ]
+    - [ zes_engine_properties_t *, pEngineProperties ]
     fields:
     - [ ctf_integer_hex, uintptr_t, hDevice, "(uintptr_t)hDevice" ]
-    - [ ctf_integer, uint32_t, subDevice, "subDevice" ]
-    - [ ctf_integer, uint64_t, activeTime, "activeTime" ]
-    - [ ctf_integer, uint64_t, timestamp, "timestamp" ]
-  - name: computeEngine
+    - [ ctf_integer_hex, uintptr_t, hEngines, "(uintptr_t)hEngines" ]
+    - [ ctf_sequence_text, uint8_t, pEngineProperties_val, pEngineProperties, size_t, "sizeof(zes_engine_properties_t)" ]
+  - name: engineStats
     args:
     - [ ze_device_handle_t, hDevice ]
-    - [ uint32_t, subDevice ]    
-    - [ uint64_t, activeTime ]
-    - [ uint64_t, timestamp ]
+    - [ zes_engine_handle_t, hEngines ]
+    - [ zes_engine_stats_t *, pEngineStats ]
     fields:
     - [ ctf_integer_hex, uintptr_t, hDevice, "(uintptr_t)hDevice" ]
-    - [ ctf_integer, uint32_t, subDevice, "subDevice" ]
-    - [ ctf_integer, uint64_t, activeTime, "activeTime" ]
-    - [ ctf_integer, uint64_t, timestamp, "timestamp" ]
+    - [ ctf_integer_hex, uintptr_t, hEngines, "(uintptr_t)hEngines" ]
+    - [ ctf_sequence_text, uint8_t, pEngineStats_val, pEngineStats, size_t, "sizeof(zes_engine_stats_t)" ]
+  - name: powerProperties
+    args:
+    - [ ze_device_handle_t, hDevice ]
+    - [ zes_pwr_handle_t, hPowers ]
+    - [ zes_power_properties_t *, pPowerProperties ]
+    fields:
+    - [ ctf_integer_hex, uintptr_t, hDevice, "(uintptr_t)hDevice" ]
+    - [ ctf_integer_hex, uintptr_t, hPowers, "(uintptr_t)hPowers" ]
+    - [ ctf_sequence_text, uint8_t, pPowerProperties_val, pPowerProperties, size_t, "sizeof(zes_power_properties_t)" ]
   - name: gpu_energy
     args:
     - [ ze_device_handle_t, hDevice ]
-    - [ uint32_t, domain ]
-    - [ uint64_t, energy ]
-    - [ uint64_t, timestamp ]
+    - [ zes_pwr_handle_t, hPowers ]
+    - [ zes_power_energy_counter_t *, pEnergyCounter ]
     fields:
     - [ ctf_integer_hex, uintptr_t, hDevice, "(uintptr_t)hDevice" ]
-    - [ ctf_integer, uint32_t, domain, "domain" ]
-    - [ ctf_integer, uint64_t, energy, "energy" ]
-    - [ ctf_integer, uint64_t, timestamp, "timestamp" ]
+    - [ ctf_integer_hex, uintptr_t, hPowers, "(uintptr_t)hPowers" ]
+    - [ ctf_sequence_text, uint8_t, pEnergyCounter_val, pEnergyCounter, size_t, "sizeof(zes_power_energy_counter_t)" ]
+  - name: freqProperties
+    args:
+    - [ ze_device_handle_t, hDevice ]
+    - [ zes_freq_handle_t, hFrequency ]
+    - [ zes_freq_properties_t *, pFreqProperties ]
+    fields:
+    - [ ctf_integer_hex, uintptr_t, hDevice, "(uintptr_t)hDevice" ]
+    - [ ctf_integer_hex, uintptr_t, hFrequency, "(uintptr_t)hFrequency" ]
+    - [ ctf_sequence_text, uint8_t, pFreqProperties_val, pFreqProperties, size_t, "sizeof(zes_freq_properties_t)" ]
   - name: gpu_frequency
     args:
     - [ ze_device_handle_t, hDevice ]
-    - [ uint32_t, domain ]
-    - [ uint64_t, frequency ]
+    - [ zes_freq_handle_t, hFrequency ]
+    - [ zes_freq_state_t *, pFreqState ]
     fields:
     - [ ctf_integer_hex, uintptr_t, hDevice, "(uintptr_t)hDevice" ]
-    - [ ctf_integer, uint32_t, domain, "domain" ]
-    - [ ctf_integer, uint64_t, frequency, "frequency" ]
+    - [ ctf_integer_hex, uintptr_t, hFrequency, "(uintptr_t)hFrequency" ]
+    - [ ctf_sequence_text, uint8_t, pFreqState_val, pFreqState, size_t, "sizeof(zes_freq_state_t)" ]
   - name: fabricPortProperties
     args:
     - [ ze_device_handle_t, hDevice ]
